fix swagger and refactor
